--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v14-bot",
+  "name": "minigames-bot",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Axen",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.5",
